# unicon

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES  imu2_states_spec.yaml  pyproject.toml  reach2_states_spec.yaml  reach_states_spec.yaml
unicon/: cmd.py  command.py  ctrl.py  general.py  losses.py  plot.py  run.py  safety.py  samplers.py  states.py  teleop.py  test.xml  transforms.py  viz.py
unicon/algo/: fk.py
unicon/algo/ik/: cpin.py  pink.py
unicon/data/: csv.py  db3.py  json.py  npy.py  npz.py
unicon/defs/: a1.py  g1.py  g123reach.py  g1reach.py  go2.py  gr1t2.py  grmini.py  h1.py  h1_2.py  hands.py  misc.py  n1.py  ptz.py
unicon/infer/: gr1.py  h0.py  hgym.py
unicon/inputs/: __init__.py  __main__.py  ev.py  hid.py  hidapi.py  js.py  pyg.py  pygame.py  term.py
unicon/io/: foxglove.py  graphite.py  prometheus.py  pyzmq.py  rclpy.py  swv.py
unicon/models/: __init__.py  rknn.py
unicon/sensors/: apriltag.py  fake.py  infrared.py  manual.py  planners.py  rgb.py
unicon/systems/: a1.py  atom.py  fake.py  fftai.py  inspire.py  kuavo.py  mini.py  n1.py  pnd.py  roslibpy.py  sims.py  t1.py  unitree.py  unitree1.py  ut_dex3.py  x2.py
unicon/tracking/: README.md  camera_calibration.py  color_calibration.py  multi_camera_tracker.py  robo_client.py  run_tracking.py  tracker.py
unicon/user/: run_unicon.sh
unicon/utils/: __init__.py  calculate_cam_pose.py  fftai.py  generate_markers.py  numpy.py  pin.py  serializers.py  torch.py  unitree.py  yourdfpy.py
unicon/xr/: __init__.py
